--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+19:51
+(wave)
+
+Mori 20:39
+привет!
+
+20:39
+ghbdtn
+привет
+
+Mori 20:40
+чем обязана?
+
+20:42
+не разобралась как создать путь сохранения для уроков (у меня автоматом на С улетает, а там нет права администратора) Это про пользование Git
+
+Mori 20:43
+а....
+
+
+Mori 21:03
+### Python template
++Temp/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -8,6 +31,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -19,11 +43,9 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -43,9 +65,7 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
+*,cover
 
 # Translations
 *.mo
@@ -53,52 +73,58 @@ coverage.xml
 
 # Django stuff:
 *.log
-local_settings.py
-db.sqlite3
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
 
 # Sphinx documentation
 docs/_build/
 
 # PyBuilder
 target/
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
-# Jupyter Notebook
-.ipynb_checkpoints
+*.iml
 
-# pyenv
-.python-version
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
 
-# celery beat schedule file
-celerybeat-schedule
+# User-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
 
-# SageMath parsed files
-*.sage.py
+# Sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+# Gradle:
+# .idea/gradle.xml
+# .idea/libraries
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Mongo Explorer plugin:
+# .idea/mongoSettings.xml
 
-# Rope project settings
-.ropeproject
+## File-based project format:
+*.ipr
+*.iws
 
-# mkdocs documentation
-/site
+## Plugin-specific files:
 
-# mypy
-.mypy_cache/
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+
+/*.zip
