--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,3 @@
-19:51
-(wave)
-
-Mori 20:39
-привет!
-
-20:39
-ghbdtn
-привет
-
-Mori 20:40
-чем обязана?
-
-20:42
-не разобралась как создать путь сохранения для уроков (у меня автоматом на С улетает, а там нет права администратора) Это про пользование Git
-
-Mori 20:43
-а....
-
-
-Mori 21:03
 ### Python template
 +Temp/
 # Byte-compiled / optimized / DLL files
@@ -33,6 +12,7 @@ __pycache__/
 .Python
 env/
 build/
+venv/
 develop-eggs/
 dist/
 downloads/
